--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,8 @@
 Source: citus-enterprise
 Section: database
 Priority: optional
-Maintainer: Jason Petersen <jason@citusdata.com>
+Maintainer: Citus Data <packaging@citusdata.com>
+Uploaders: Jason Petersen <jason@citusdata.com>
 Build-Depends: debhelper (>= 9), autotools-dev, flex, postgresql-server-dev-all (>= 158~), libedit-dev, libpam0g-dev, libselinux1-dev, libxslt1-dev
 Standards-Version: 3.9.7
 Homepage: https://github.com/citusdata/citus-enterprise
