--- a/dockerfiles/ubuntu-precise-all/Dockerfile
+++ b/dockerfiles/ubuntu-precise-all/Dockerfile
@@ -14,6 +14,7 @@ RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys B97B0AFCAA1A4
         devscripts \
         fakeroot \
         flex \
+        libdistro-info-perl \
         libedit-dev \
         libfile-fcntllock-perl \
         libpam0g-dev \
