Add g++ package for Fedora builds
Turns out the development tools group doesn't include g++ on Fedora
platforms. Weird, but adding it is simple.

--- a/dockerfiles/centos-6-pg94/Dockerfile
+++ b/dockerfiles/centos-6-pg94/Dockerfile
@@ -10,6 +10,7 @@ RUN yum groupinstall -y 'Development Tools' \
     && yum install -y \
         curl \
         flex \
+        gcc-c++ \
         hunspell-en \
         libxml2-devel \
         libxslt-devel \
