Switch to 'fancy' versioning for Debian Enterprise (#34)
Similar to community edition, we switch 'fancy' versioning in enterprise
repos.

Merging will release postgresql-9.5-citus-enterprise-6.0 and
postgresql-9.5-citus-enterprise-6.0. The version will be 6.0.1.citus-3 and
existing Citus users can easily upgrade with an apt-get dist-upgrade command
(so long as we remember to add the 6.0.1.citus-2 transitional package to our
repository). All sub-sequent 'fancy' version packages will conflict with one
another, ensuring two versions cannot be installed at the same time

cr: @jasonmp85

--- a/debian/control.in
+++ b/debian/control.in
@@ -3,7 +3,7 @@ Section: database
 Priority: optional
 Maintainer: Citus Data <packaging@citusdata.com>
 Uploaders: Jason Petersen <jason@citusdata.com>
-Build-Depends: debhelper (>= 9), autotools-dev, postgresql-server-dev-all (>= 158~)
+Build-Depends: debhelper (>= 9), autotools-dev, postgresql-server-dev-all (>= 158~), libedit-dev, libpam0g-dev, libselinux1-dev, libxslt1-dev, libssl-dev
 Standards-Version: 3.9.7
 Homepage: https://github.com/citusdata/citus-enterprise
 XS-Testsuite: autopkgtest
@@ -11,8 +11,9 @@ XS-Testsuite: autopkgtest
 Package: postgresql-PGVERSION-citus-enterprise
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, postgresql-PGVERSION
-Conflicts: postgresql-PGVERSION-citus
-Replaces: postgresql-PGVERSION-citus
+Provides: postgresql-PGVERSION-citus, postgresql-PGVERSION-citus-enterprise
+Conflicts: postgresql-PGVERSION-citus, postgresql-PGVERSION-citus-enterprise
+Replaces: postgresql-PGVERSION-citus-enterprise (<< 6.0.1.citus-2~)
 Description: sharding and distributed joins for PostgreSQL
  Citus is a distributed database implemented as a PostgreSQL extension. It
  provides functions to easily split a PostgreSQL table into shards to be
