--- a/dockerfiles/debian-wheezy-all/Dockerfile
+++ b/dockerfiles/debian-wheezy-all/Dockerfile
@@ -34,7 +34,7 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
 
 # install latest Citus release to get header files
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.deb.sh | bash \
-    && apt-get install -y postgresql-9.5-citus postgresql-9.6-citus \
+    && apt-get install -y postgresql-9.5-citus-6.0 postgresql-9.6-citus-6.0 \
     && rm -rf /var/lib/apt/lists/*
 
 # patch pg_buildext to use multiple processors
