--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
     - TARGET_PLATFORM=ubuntu/trusty
     - TARGET_PLATFORM=ubuntu/precise
 before_install:
-  - git clone -b v0.5.0 --depth 1 https://github.com/citusdata/tools.git
+  - git clone -b v0.5.2 --depth 1 https://github.com/citusdata/tools.git
   - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
@@ -30,7 +30,7 @@ deploy:
     token: $PACKAGECLOUD_API_TOKEN
     dist: $TARGET_PLATFORM
     skip_cleanup: true
-    local-dir: "releases"
+    local-dir: "pkgs/releases"
     on:
       branch: "debian-analytics"
-      condition: -d "releases"
+      condition: -d "pkgs/releases"
