--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ env:
     - TARGET_PLATFORM=ubuntu/precise
 before_install:
   - git clone -b v0.5.2 --depth 1 https://github.com/citusdata/tools.git
-  - export PATH="$(pwd)/tools/travis:$PATH"
-  - export PATH="$(pwd)/tools/packaging:$PATH"
+  - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
 script: build_new_release # && build_new_nightly
