--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
-script: build_new_release #&& build_new_nightly
+script: build_new_release
 deploy:
   - provider: packagecloud
     username: "citusdata"
@@ -35,13 +35,3 @@ deploy:
     on:
       branch: "redhat-rebalancer"
       condition: -d "pkgs/releases"
-  - provider: packagecloud
-    username: "citusdata"
-    repository: "$PKG_REPOTYPE-nightlies"
-    token: $PACKAGECLOUD_API_TOKEN
-    dist: $TARGET_PLATFORM
-    skip_cleanup: true
-    local-dir: "pkgs/nightlies"
-    on:
-      branch: "redhat-rebalancer"
-      condition: -d "pkgs/nightlies"
