--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
     - TARGET_PLATFORM=ubuntu/trusty
     - TARGET_PLATFORM=ubuntu/precise
 before_install:
-  - git clone -b v0.5.3 --depth 1 https://github.com/citusdata/tools.git
+  - git clone -b curl_bug --depth 1 https://github.com/citusdata/tools.git
   - sudo make -C tools install
   - export PACKAGING_SECRET_KEY="$(openssl aes-256-cbc -K $encrypted_a39e3f1ee8ba_key -iv $encrypted_a39e3f1ee8ba_iv -in signing_key.asc.enc -d | base64)"
 install: true
