Update header install to 6.2, add Debian Stretch

--- a/dockerfiles/debian-stretch-all/Dockerfile
+++ b/dockerfiles/debian-stretch-all/Dockerfile
@@ -52,9 +52,9 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
     && chmod +x /usr/bin/jq
 
 # install latest Citus release to get header files
-# RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.deb.sh | bash \
-#     && apt-get install -y postgresql-9.5-citus-6.0 postgresql-9.6-citus-6.0 \
-#     && rm -rf /var/lib/apt/lists/*
+RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.deb.sh | bash \
+    && apt-get install -y postgresql-9.5-citus-6.2 postgresql-9.6-citus-6.2 \
+    && rm -rf /var/lib/apt/lists/*
 
 # patch pg_buildext to use multiple processors
 COPY make_pg_buildext_parallel.patch /
