--- a/dockerfiles/fedora-26-pg96/Dockerfile
+++ b/dockerfiles/fedora-26-pg96/Dockerfile
@@ -12,6 +12,7 @@ RUN yum groupinstall -y 'Development Tools' \
         flex \
         gcc-c++ \
         hunspell-en \
+        libicu-devel \
         libxml2-devel \
         libxslt-devel \
         openssl-devel \
