--- a/dockerfiles/debian-jessie-all/Dockerfile
+++ b/dockerfiles/debian-jessie-all/Dockerfile
@@ -53,9 +53,8 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
     && chmod +x /usr/bin/jq
 
 # install latest Citus release to get header files
-# FIXME: add postgresql-10-citus-7.0 once debs are in the repository
 RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.deb.sh | bash \
-    && apt-get install -y postgresql-9.5-citus-6.2 postgresql-9.6-citus-7.0 \
+    && apt-get install -y postgresql-9.5-citus-6.2 postgresql-9.6-citus-7.0 postgresql-10-citus-7.0 \
     && rm -rf /var/lib/apt/lists/*
 
 # patch pg_buildext to use multiple processors
