--- a/dockerfiles/fedora-26-pg10/Dockerfile
+++ b/dockerfiles/fedora-26-pg10/Dockerfile
@@ -32,10 +32,9 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
     && chmod +x /usr/bin/jq
 
 # install latest Citus release to get header files
-# FIXME: re-enable once PostgreSQL 10 RPMs are in the repository
-# RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
-#     && yum install -y citus70_10 \
-#     && yum clean all
+RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
+    && yum install -y citus70_10 \
+    && yum clean all
 
 RUN touch /rpmlintrc \
     && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
