use this branch for pushes to packagecloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,5 +31,5 @@ deploy:
     skip_cleanup: true
     local-dir: "pkgs/releases"
     on:
-      branch: "redhat-ha"
+      branch: "redhat-pgautofailover-enterprise"
       condition: -d "pkgs/releases"
