Install zlibg package to debian image
Other OSs seem to have this package coming from their
respective base images but debian-stretch did not.

It is needed to to build pg_auto_failover packages

--- a/dockerfiles/debian-stretch-all/Dockerfile
+++ b/dockerfiles/debian-stretch-all/Dockerfile
@@ -58,6 +58,7 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main' > /etc
         lintian \
         postgresql-server-dev-all \
         wget \
+        zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # install jq to process JSON API responses
