Add sphinx build to oracle-linux-7 images

--- a/dockerfiles/oraclelinux-7-pg10/Dockerfile
+++ b/dockerfiles/oraclelinux-7-pg10/Dockerfile
@@ -27,6 +27,11 @@ RUN yum groupinstall -y 'Development Tools' \
     && yum install -y postgresql10-devel \
     && yum clean all
 
+# install documentation generation libraries
+RUN yum install -y python-pip python-sphinx \
+    && pip install --upgrade pip \
+    && pip install -U Sphinx
+
 # install jq to process JSON API responses
 RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 \
          -o /usr/bin/jq \
