--- a/dockerfiles/centos-8-pg11/Dockerfile
+++ b/dockerfiles/centos-8-pg11/Dockerfile
@@ -1,11 +1,14 @@
 # vim:set ft=dockerfile:
 FROM centos:8
 
+# FIXME: Hack around docker/docker#10180
+RUN ( yum install -y yum-plugin-ovl || yum install -y yum-plugin-ovl ) \
+    && yum clean all
+
 # install build tools and PostgreSQL development files
-RUN yum install -y epel-release \
+RUN yum install -y centos-release-scl-rh epel-release \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
-        # ccache \
         curl \
         flex \
         gcc-c++ \
@@ -14,7 +17,8 @@ RUN yum install -y epel-release \
         libicu-devel \
         libxml2-devel \
         libxslt-devel \
-        llvm-toolset \
+        llvm-toolset-7-clang \
+        llvm5.0 \
         openssl-devel \
         pam-devel \
         readline-devel \
@@ -23,7 +27,6 @@ RUN yum install -y epel-release \
         spectool \
         tar \
     && yum install -y https://download.postgresql.org/pub/repos/yum/11/redhat/rhel-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm \
-    && dnf -qy module disable postgresql \
     && yum install -y postgresql11-devel \
     && yum clean all
 
@@ -32,13 +35,16 @@ RUN curl -sL https://github.com/stedolan/jq/releases/download/jq-1.5/jq-linux64 
          -o /usr/bin/jq \
     && chmod +x /usr/bin/jq
 
+# install latest Citus release to get header files
+RUN curl -s https://packagecloud.io/install/repositories/citusdata/community/script.rpm.sh | bash \
+    && yum clean all
+
 RUN touch /rpmlintrc \
     && echo '%_build_pkgcheck %{_bindir}/rpmlint -f /rpmlintrc' >> /etc/rpm/macros
 
 # set PostgreSQL version, place scripts on path, and declare output volume
 ENV PGVERSION=11 \
     PATH=/scripts:$PATH
-
 COPY scripts /scripts
 VOLUME /packages
 
