Add CI deploy stage for image pushes to DockerHub

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,8 @@ install: true
 script:
   - ./update_dockerfiles && git diff --exit-code dockerfiles
   - git checkout -- dockerfiles && ./update_images
+deploy:
+  provider: script
+  script: bash ci/push_images
+  on:
+    branch: develop
