Push docker images from travis (#467)
Co-authored-by: Hanefi.Onaldi@Microsoft.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ install: true
 script:
   - ./update_dockerfiles && git add --intent-to-add dockerfiles && git diff --exit-code dockerfiles
   - git checkout -- dockerfiles && ./update_images
+  - ./ci/push_images
